Updates and Bug fixes
Updating sanity studio packages. Bug fix for character images not showing on about page. Bestiary modal should close on overlay click. Bug fix for sessions without a slug causing a build error with Netlify.

--- a/web/src/components/bestiary/bestiary-grid.module.css
+++ b/web/src/components/bestiary/bestiary-grid.module.css
@@ -18,6 +18,6 @@
   }
 
   @media (--media-min-medium) {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
   }
 }
