--- a/web/src/pages/bestiary.module.css
+++ b/web/src/pages/bestiary.module.css
@@ -30,9 +30,9 @@
 
 .tagGrid {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-column-gap: 1em;
-  grid-row-gap: 1em;
+  grid-template-columns: repeat(auto-fill, minmax(125px, 1fr));
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
   list-style: none;
   padding: 0;
 
